<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_add_item_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/text_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_add_item"/>

        <Spinner
            android:id="@+id/spinner_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_category"/>

        <EditText
            android:id="@+id/text_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_quantity"/>

        <Spinner
            android:id="@+id/spinner_item_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_item_unit"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_margin="8dp"/>

</LinearLayout>